--- a/Labs/L1_LinearRegression/L1_LinearRegression.ipynb
+++ b/Labs/L1_LinearRegression/L1_LinearRegression.ipynb
@@ -219,14 +219,14 @@
         "``` {matlab}\n",
         "Data = readmatrix('winequality-red.csv');\n",
         "X = Data(:,1:11);   % 11 columns for the inputs\n",
-        "Y = Data(:,12);     % 1 column for the output\n",
+        "Y = Data(:,13);     % 1 column for the output\n",
         "N = size(Data,1);   % The number of wines in the set (1599)\n",
         "```\n",
         "\n",
         "Extend the X matrix so we can treat the bias $b$ as just another weight.\n",
         "\n",
         "``` {matlab}\n",
-        "X = [X ones(N,1)]\n",
+        "X2 = [X ones(N,1)]\n",
         "```\n",
         "\n",
         "Let’s initialize the weights to some random values\n",
@@ -366,7 +366,7 @@
         "2.  What’s the difference between a coefficient $w_i$ being positive vs\n",
         "    negative?"
       ],
-      "id": "75b0f2e6-26f5-43ed-94e2-b57e5fca18ff"
+      "id": "5307674c-df83-43eb-a59e-1da8cc586157"
     }
   ],
   "nbformat": 4,
