--- a/Labs/L5_ObjectDetectionWithSSD/L5_ObjectDetectionWithSSD.qmd
+++ b/Labs/L5_ObjectDetectionWithSSD/L5_ObjectDetectionWithSSD.qmd
@@ -1,7 +1,7 @@
 ---
-title: "Object Detection with SSD networks"
+title: "Object Detection networks"
 subtitle: "ML Laboratory 05"
-format: 
+format:
   html: default
   pdf: default
   ipynb: default
@@ -14,7 +14,7 @@ jupyter: python3
 execute:
   freeze: true
   eval: false
-    
+
 ---
 
 ## Objective
@@ -41,7 +41,7 @@ The model is trained on a series of images from different categories (e.g. perso
 when predicting on a new image, the model returns a list of detected objects, each object having the following data:
 
 1. The **bounding box** surrounding the object. This is defined by 4 pixel coordinates (e.g. bottom=140, top=300, left=74, right=128), but can come in different varieties:
-     
+
    - (left, top, right, bottom), or in another order
    - (left, top, width, height)
    - (center_x, center_y, semi-width, semi-height)
@@ -68,7 +68,7 @@ The **outputs** of the network are the parameters for all $N$ detection boxes:
 
 - A matrix of $N \times 4$ values with the predicted box displacements/distortions with respect to all the $N$ anchor boxes (i.e. offset x, offset y, height scaling, width scaling).
 - A matrix of $N \times C$ with the predicted class scores for all the $N$ boxes. $C$ is the number of distinct classes in the dataset.
-   
+
 $N$ is the total number of predicted boxes over all the image. It can be very large, e.g. 8732 boxes for a $300 \times 300$ image.
 
 For a larger $1024 \times 640$ image, the number can be much larger, over 90000 (speaking from experience). Of course, it depends on the parameters chosen by the designer.
@@ -115,8 +115,8 @@ When training, the predicted boxes are compared to the **real ground-truth** box
 
 1. The **localization error**: typically, is the absolute difference between the coordinates or displacements of the ground-truth box and the predicted box.
 
-2. The **classification error**, which compares the class scores of the predicted box with the true ground-truth class. The cross-entropy loss function is typically used, just like it is used for all other classification tasks. 
-  
+2. The **classification error**, which compares the class scores of the predicted box with the true ground-truth class. The cross-entropy loss function is typically used, just like it is used for all other classification tasks.
+
    Besides the predicted boxes which are compared to the ground-truth, there are many predicted boxes which corespond to **no** ground truth box. There are a few different methods how to treat these, some methods (e.g. Focal Loss) being better than others.
 
 ### Training
@@ -127,14 +127,14 @@ Training is done with **backpropagation** and gradient descent (or some variant 
 
 This is similar to all CNN networks.
 
-## Matlab tutorials walkthrough 
+## Matlab tutorials walkthrough
 
 Practical work is based on 3 Matlab examples:
 
-1. [Multiclass Object Detection Using YOLO v2 Deep Learning](https://www.mathworks.com/help/vision/ug/multiclass-object-detection-using-yolo-v2-deep-learning.html)
+ <!-- 1. [Multiclass Object Detection Using YOLO v2 Deep Learning](https://www.mathworks.com/help/vision/ug/multiclass-object-detection-using-yolo-v2-deep-learning.html) -->
 
 2. Using the pretrained detectors available in [Mathworks Github](https://github.com/matlab-deep-learning/MATLAB-Deep-Learning-Model-Hub#object-detection-)
-   
+
    - Use [EfficientDet](https://github.com/matlab-deep-learning/pretrained-efficientdet-d0)
    - Download the zip file of the whole repository and unzip in Matlab Online
    - Run the `efficientDetD0ObjectDetectionExample.m` file
@@ -166,7 +166,7 @@ Other tutorials:
 
   What happens with the car image? This is the image which goes into the object detector network. Do you thinks this a problem?
 
-- Use any Windows tool to crop from the `CarWide.jpg` a square part containing the car, save it, and run the object detector on it. 
+- Use any Windows tool to crop from the `CarWide.jpg` a square part containing the car, save it, and run the object detector on it.
 
   Does the detection score improve?
 
@@ -177,7 +177,7 @@ Other tutorials:
   - about 3/4 of the car
   - about 1/2 of the car
   - about 1/4 of the car
-  
+
 - Save each image and run the object detector on each of them.  What is the detection score?
 
 ### Exercise 4 - YoloX
@@ -188,7 +188,7 @@ Other tutorials:
   - Display only the objects with the highest score
   - Display only the object whose center (the center of the box) is the left-most among all objects
   - Display only the non-person objects
-  
+
 - Identify the two threshold values in the `postprocess.m` function, the score threshold and the overlap threshold.
 - Set both thresholds to 0.03 and display the results. How many objects are detected now?
 - Set the score threshold to 0.1 and the overlap threshold to 0.8. How many objects are detected now?
@@ -197,7 +197,7 @@ Other tutorials:
 
 ### Exercise 5 - Non-max suppression
 
-Write a small Matlab function called `IOU` which computes the intersection-over-union of two bounding boxes, 
+Write a small Matlab function called `IOU` which computes the intersection-over-union of two bounding boxes,
 given as vectors `[left, right, bottom, top]`.
 
 Use the `rectint()` function to compute the intersection of the boxes.
@@ -222,7 +222,7 @@ B = [10, 80, 40, 140];
 
 ### Exercise 6 - SSD
 
-1. Run the first steps of the [Object Detection Using SSD Deep Learning](https://www.mathworks.com/help/vision/ug/object-detection-using-single-shot-detector.html) tutorial, 
+1. Run the first steps of the [Object Detection Using SSD Deep Learning](https://www.mathworks.com/help/vision/ug/object-detection-using-single-shot-detector.html) tutorial,
    and stop before the creation of the SSD network.
 
 2. Investigate the network architecture by running `analyzeNetwork()` on the network variable `lgraph`
